<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sayed.soufra.ui.fragments.AddItemFragment">

    <EditText
        android:id="@+id/additem_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:padding="@dimen/dimens_l"
        android:textSize="@dimen/txt_size_l"
        android:layout_marginEnd="@dimen/dimens_m"
        android:layout_marginStart="@dimen/dimens_m"
        android:layout_marginTop="@dimen/dimens_l"
        android:background="@drawable/background"/>
    <EditText
        android:id="@+id/additem_product_description"
        android:layout_width="match_parent"
        android:layout_height="@dimen/album_dp_100"
        android:hint="@string/product_description"
        android:gravity="top"
        android:layout_gravity="start"
        android:textSize="@dimen/txt_size_l"
        android:layout_marginEnd="@dimen/dimens_m"
        android:layout_marginStart="@dimen/dimens_m"
        android:layout_marginTop="@dimen/dimens_l"
        android:background="@drawable/background"/>
    <EditText
        android:id="@+id/additem_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_price"
        android:padding="@dimen/dimens_l"
        android:textSize="@dimen/txt_size_l"
        android:layout_marginEnd="@dimen/dimens_m"
        android:layout_marginStart="@dimen/dimens_m"
        android:layout_marginTop="@dimen/dimens_l"
        android:background="@drawable/background"/>
    <EditText
        android:id="@+id/additem_product_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_period"
        android:padding="@dimen/dimens_l"
        android:textSize="@dimen/txt_size_l"
        android:layout_marginEnd="@dimen/dimens_m"
        android:background="@drawable/background"
        android:layout_marginStart="@dimen/dimens_m"
        android:layout_marginTop="@dimen/dimens_l"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginTop="@dimen/dimens_l"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/additem_img"
            android:layout_width="@dimen/dimn_simg"
            android:layout_height="@dimen/dimn_simg"
            android:layout_marginTop="@dimen/dimens_l"
            android:src="@drawable/img"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_addphoto"
            android:textStyle="bold"
            android:textSize="@dimen/dimens_xl"
            android:layout_marginRight="@dimen/dimens_l"
            android:layout_gravity="center"/>

    </LinearLayout>
    <Button
        android:id="@+id/additem_product_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_add"
        android:textSize="@dimen/txt_size_xxl"
        android:background="@color/green"
        android:textColor="@color/colorwhite"
        android:padding="@dimen/dimens_m"
        android:layout_marginStart="@dimen/dimens_m"
        android:layout_marginEnd="@dimen/dimens_m"
        android:layout_marginTop="@dimen/dimens_xxxxl"/>

</android.support.v7.widget.LinearLayoutCompat>
